@@ -1,3 +1,8 @@
+2016-09-30  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/77399
+	* gcc.dg/tree-ssa/forwprop-35.c: New testcase.
+
 2016-09-29  Sandra Loosemore  <sandra@codesourcery.com>
 
 	* c-c++-common/pr27336.c: Make dependency on 
